--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
               <i class="fas fa-palette"></i>
             </div>
 
-            <div class="color-switcher-dropdown open">
+            <div class="color-switcher-dropdown">
               <h3>Choose your color</h3>
 
               <div class="btn-box">
 
-                <button class="color active blue"></button>
-                <button class="color purple"></button>
-                <button class="color green"></button>
+                <button class="color active blue" data-colors="#eee8d5 #f1cd57 #e0bf51 #d1b24c"></button>
+                <button class="color green" data-colors="#eee8d5 #f1cd57 #e0bf51 #d1b24c"></button>
+                <button class="color purple" data-colors="#eee8d5 #f1cd57 #e0bf51 #d1b24c"></button>
 
               </div>
             </div>
@@ -48,6 +48,8 @@
       </div>
     </div>
   </header>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
