--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Note Board</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="main-style.css">
   <script src="https://kit.fontawesome.com/3617a89b26.js" crossorigin="anonymous"></script>
 </head>
 
@@ -33,9 +34,9 @@
 
               <div class="btn-box">
 
-                <button class="color active blue" data-colors="#eee8d5 #f1cd57 #e0bf51 #d1b24c"></button>
-                <button class="color green" data-colors="#eee8d5 #f1cd57 #e0bf51 #d1b24c"></button>
-                <button class="color purple" data-colors="#eee8d5 #f1cd57 #e0bf51 #d1b24c"></button>
+                <button class="color active blue" data-colors="#292722 #ffd257 #ffd257cc #e9c258 #e9c25880 #fffbf1"></button>
+                <button class="color green" data-colors="#27312b #6ace97 #6ace97cc #59b884 #59b88480 #e7fdf1"></button>
+                <button class="color purple" data-colors="#231f25 #ac40f4 #ac40f4cc #8515cf #8515cf80 #fcf8ff"></button>
 
               </div>
             </div>
@@ -48,6 +49,28 @@
       </div>
     </div>
   </header>
+
+  <main>
+    <section class="intro">
+      <div class="intro-text">
+        <h1>Wellcome to Your <span>Note Board</span></h1>
+        <p>NoteBoard functions as a service for making short text notes, which can be imported from file and export into
+          your google calendar.</p>
+        <div class="btn btn-explore">
+          <a href="#">Explore now</a>
+        </div>
+      </div>
+      <div class="intro-note">
+        <div class="note">
+          <h3>Your first note</h3>
+          <p>Write down enething You want... Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, enim.
+            Corrupti, itaque fugit veniam quas libero debitis sint ipsa.
+          </p>
+        </div>
+      </div>
+    </section>
+
+  </main>
 
   <script src="script.js"></script>
 </body>
