--- a/index.html
+++ b/index.html
@@ -1,78 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Note Board</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Note Board</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="main-style.css">
-  <script src="https://kit.fontawesome.com/3617a89b26.js" crossorigin="anonymous"></script>
-</head>
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="intro.css" />
+    <link rel="stylesheet" href="note.css" />
 
-<body>
-  <header>
-    <div class="header-box">
-      <div class="logo">
-        <a href="#">Note Board</a>
-      </div>
+    <script
+      src="https://kit.fontawesome.com/3617a89b26.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-      <div class="header-box-right">
-        <div class="appearance">
-          <div class="theme-switcher-icon">
-            <i class="fas fa-lightbulb"></i>
-          </div>
+  <body>
+    <header>
+      <div class="header-box">
+        <div class="logo">
+          <a href="#">Note Board</a>
+        </div>
 
-          <div class="color-switcher">
-            <div class="color-switcher-icon">
-              <i class="fas fa-palette"></i>
+        <div class="header-box-right">
+          <div class="appearance">
+            <div class="theme-switcher-icon">
+              <i class="fas fa-lightbulb"></i>
             </div>
 
-            <div class="color-switcher-dropdown">
-              <h3>Choose your color</h3>
+            <div class="color-switcher">
+              <div class="color-switcher-icon">
+                <i class="fas fa-palette"></i>
+              </div>
 
-              <div class="btn-box">
+              <div class="color-switcher-dropdown">
+                <h3>Choose your color</h3>
 
-                <button class="color active blue" data-colors="#292722 #ffd257 #ffd257cc #e9c258 #e9c25880 #fffbf1"></button>
-                <button class="color green" data-colors="#27312b #6ace97 #6ace97cc #59b884 #59b88480 #e7fdf1"></button>
-                <button class="color purple" data-colors="#231f25 #ac40f4 #ac40f4cc #8515cf #8515cf80 #fcf8ff"></button>
-
+                <div class="btn-box">
+                  <button
+                    class="color active blue"
+                    data-colors="#292722 #ffd257 #ffd257cc #e9c258 #e9c25880 #fffbf1"
+                  ></button>
+                  <button
+                    class="color green"
+                    data-colors="#27312b #6ace97 #6ace97cc #59b884 #59b88480 #e7fdf1"
+                  ></button>
+                  <button
+                    class="color purple"
+                    data-colors="#231f25 #ac40f4 #ac40f4cc #8515cf #8515cf80 #fcf8ff"
+                  ></button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="login-signup">
-          <a href="#">Login</a>
+          <div class="login-signup">
+            <a href="#">Login</a>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main>
-    <section class="intro">
-      <div class="intro-text">
-        <h1>Wellcome to Your <span>Note Board</span></h1>
-        <p>NoteBoard functions as a service for making short text notes, which can be imported from file and export into
-          your google calendar.</p>
-        <div class="btn btn-explore">
-          <a href="#">Explore now</a>
-        </div>
-      </div>
-      <div class="intro-note">
-        <div class="note">
-          <h3>Your first note</h3>
-          <p>Write down enething You want... Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, enim.
-            Corrupti, itaque fugit veniam quas libero debitis sint ipsa.
+    <main>
+      <section class="intro">
+        <div class="intro-text">
+          <h1>Wellcome to Your <span>Note Board</span></h1>
+          <p>
+            NoteBoard functions as a service for making short text notes, which
+            can be imported from file and export into your google calendar.
           </p>
+          <div class="btn btn-explore">
+            <a href="#">Explore now</a>
+          </div>
         </div>
-      </div>
-    </section>
+        <div class="intro-note">
+          <div class="note">
+            <i class="fas fa-times-circle"></i>
+            <h3>Your first note</h3>
+            <p>
+              Write down enething You want... Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Eos, enim. Corrupti, itaque fugit
+              veniam quas libero debitis sint ipsa.
+            </p>
+          </div>
+        </div>
+      </section>
 
-  </main>
+      <section class="notes-box">
+        <div class="notes-wrapper">
+          <div class="note">
+            <i class="fas fa-times-circle"></i>
+            <input type="text" name="note-title" placeholder="Title" />
+            <textarea
+              name="note-text"
+              rows="5"
+              placeholder="note"
+              oninput="auto_grow(this)"
+            ></textarea>
+            <button type="submit">Create</button>
+          </div>
 
-  <script src="script.js"></script>
-</body>
+          <div class="note">
+            <i class="fas fa-times-circle"></i>
+            <h3>Your first note</h3>
+            <p>
+              Write down enething You want... Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Eos, enim. Corrupti, itaque fugit
+              veniam quas libero debitis sint ipsa.
+            </p>
+          </div>
 
+          <div class="note">
+            <i class="fas fa-times-circle"></i>
+            <h3>Your first note</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam
+              consectetur laborum voluptate alias dolor earum beatae delectus
+              commodi in provident iste, cumque tenetur sapiente dicta!
+              Molestiae inventore consequuntur quasi distinctio.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <script src="theme-colors.js"></script>
+  </body>
 </html>
