--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note Board</title>
 
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="intro.css" />
-    <link rel="stylesheet" href="note.css" />
+    <link rel="stylesheet" href="/style/drag-n-drop.css" />
+    <link rel="stylesheet" href="/style/header-tag.css" />
+    <link rel="stylesheet" href="/style/hovers.css" />
+    <link rel="stylesheet" href="/style/main-tag.css" />
+    <link rel="stylesheet" href="/style/note.css" />
+    <link rel="stylesheet" href="/style/basics.css" />
 
     <script
       src="https://kit.fontawesome.com/3617a89b26.js"
@@ -54,55 +57,45 @@
               </div>
             </div>
           </div>
-
-          <div class="login-signup">
-            <a href="#">Login</a>
-          </div>
+          <button class="btn-login">Login</button>
         </div>
       </div>
     </header>
 
     <main class="main-wrapper">
       <section class="intro">
+
         <div class="intro-text">
           <h1>Wellcome to Your <span>Note Board</span></h1>
           <p>
             NoteBoard functions as a service for making short text notes, which
             can be imported from file and export into your google calendar.
           </p>
-          <div class="btn btn-explore">
-            <a href="#">Explore now</a>
-          </div>
+          <button>Create Note</button>
         </div>
-        <div class="intro-note">
-          <div class="note">
-            <i class="fas fa-times-circle fuck" id="btn-close"></i>
-            <h3>Your first note</h3>
-            <p>
-              Write down enething You want... Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Eos, enim. Corrupti, itaque fugit
-              veniam quas libero debitis sint ipsa.
-            </p>
-          </div>
-        </div>
-      </section>
 
-      <section class="notes-box">
-        <div class="notes-wrapper">
+        <div class="intro-note">
           <div class="note note-input">
             <i class="fas fa-times-circle fuck" id="btn-close"></i>
             <input type="text" name="note-title" placeholder="Title" />
             <textarea name="note-text" placeholder="Note"></textarea>
-            <div class="btn btn-create">
-              <a href="#">Add note</a>
-            </div>
+            <button>Add Note</button>
           </div>
         </div>
+
+      </section>
+
+      <section class="notes-wrapper">
+          <!-- <div class="drag-n-drop">
+            <h3>Drag & Drop to Upload File</h3>
+            <button>Browse File</button>
+            <input type="file" hidden />
+          </div> -->
       </section>
     </main>
 
-    <script src="theme-colors-switcher.js"></script>
-    <script src="hide-header.js"></script>
-    <script src="create-note.js"></script>
+    <script src="/script/create-note.js"></script>
+    <script src="/script/hide-header.js"></script>
+    <script src="/script/theme-colors-switcher.js"></script>
   </body>
 </html>
