--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note Board</title>
 
-    <link rel="stylesheet" href="/style/drag-n-drop.css" />
-    <link rel="stylesheet" href="/style/header-tag.css" />
-    <link rel="stylesheet" href="/style/hovers.css" />
-    <link rel="stylesheet" href="/style/main-tag.css" />
-    <link rel="stylesheet" href="/style/note.css" />
-    <link rel="stylesheet" href="/style/basics.css" />
+    <link rel="stylesheet" href="/src/style/drag-n-drop.css" />
+    <link rel="stylesheet" href="/src/style/header-tag.css" />
+    <link rel="stylesheet" href="/src/style/hovers.css" />
+    <link rel="stylesheet" href="/src/style/main-tag.css" />
+    <link rel="stylesheet" href="/src/style/note.css" />
+    <link rel="stylesheet" href="/src/style/basics.css" />
 
     <script
       src="https://kit.fontawesome.com/3617a89b26.js"
@@ -95,8 +95,8 @@
       </section>
     </main>
 
-    <script src="/script/create-note.js"></script>
-    <script src="/script/hide-header.js"></script>
-    <script src="/script/theme-colors-switcher.js"></script>
+    <script src="/src/script/create-note.js"></script>
+    <script src="/src/script/hide-header.js"></script>
+    <script src="/src/script/theme-colors-switcher.js"></script>
   </body>
 </html>
