--- a/src/index.html
+++ b/src/index.html
@@ -1,100 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Note Board</title>
 
-    <link rel="stylesheet" href="/src/style/header.css" />
-    <link rel="stylesheet" href="/src/style/hovers.css" />
-    <link rel="stylesheet" href="/src/style/main.css" />
-    <link rel="stylesheet" href="/src/style/note.css" />
-    <link rel="stylesheet" href="/src/style/base.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Note Board</title>
 
-    <script
-      src="https://kit.fontawesome.com/3617a89b26.js"
-      crossorigin="anonymous"
-    ></script>
+  <link rel="stylesheet" href="/src/style/header.css" />
+  <link rel="stylesheet" href="/src/style/hovers.css" />
+  <link rel="stylesheet" href="/src/style/main.css" />
+  <link rel="stylesheet" href="/src/style/note.css" />
+  <link rel="stylesheet" href="/src/style/base.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.10.2/Sortable.min.js"></script>
-  </head>
+  <script src="https://kit.fontawesome.com/3617a89b26.js" crossorigin="anonymous"></script>
 
-  <body>
-    <header class="">
-      <div class="header-box">
-        <div class="logo">
-          <a href="#"></a>
-        </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.10.2/Sortable.min.js"></script>
+</head>
 
-        <div class="header-box-right">
-          <div class="appearance">
-            <div class="theme-switcher-icon">
-              <i class="fas fa-lightbulb"></i>
+<body>
+  <header class="">
+    <div class="header-box">
+      <div class="logo">
+        <a href="#"></a>
+      </div>
+
+      <div class="header-box-right">
+        <div class="appearance">
+          <div class="theme-switcher-icon">
+            <i class="fas fa-lightbulb"></i>
+          </div>
+
+          <div class="color-switcher">
+            <div class="color-switcher-icon">
+              <i class="fas fa-palette"></i>
             </div>
 
-            <div class="color-switcher">
-              <div class="color-switcher-icon">
-                <i class="fas fa-palette"></i>
-              </div>
+            <div class="color-switcher-dropdown">
+              <h3>Choose your color</h3>
 
-              <div class="color-switcher-dropdown">
-                <h3>Choose your color</h3>
-
-                <div class="btn-box">
-                  <button
-                    class="color active blue"
-                    data-colors="rgb(61,133,201) rgb(57,122,182)"
-                  ></button>
-                  <button
-                    class="color green"
-                    data-colors="rgb(32,158,70) rgb(30,136,62)"
-                  ></button>
-                  <button
-                    class="color purple"
-                    data-colors="rgb(201,61,119) rgb(177,55,106)"
-                  ></button>
-                </div>
+              <div class="btn-box">
+                <button class="color active blue" data-colors="rgb(61,133,201) rgb(57,122,182)"></button>
+                <button class="color green" data-colors="rgb(32,158,70) rgb(30,136,62)"></button>
+                <button class="color purple" data-colors="rgb(201,61,119) rgb(177,55,106)"></button>
               </div>
             </div>
           </div>
-          <button class="btn-login">Login</button>
+        </div>
+        <button class="btn-login">Login</button>
+      </div>
+    </div>
+  </header>
+
+  <main class="main-wrapper">
+    <section class="intro">
+      <div class="intro-text">
+        <h1>Wellcome to Your <span>Note Board</span></h1>
+        <p>
+          NoteBoard functions as a service for making short text notes, which
+          can be imported from file and export into your google calendar.
+        </p>
+        <button>Create Note</button>
+      </div>
+
+      <div class="intro-note">
+        <div class="note note-input">
+          <i class="fas fa-times-circle fuck" id="btn-close"></i>
+          <input type="text" name="note-title" placeholder="Title" required maxlength="20" />
+          <textarea name="note-text" placeholder="Note" required></textarea>
+          <button type="submit">Add Note</button>
+          <span class="input-length">100</span>
         </div>
       </div>
-    </header>
+    </section>
 
-    <main class="main-wrapper">
-      <section class="intro">
-        <div class="intro-text">
-          <h1>Wellcome to Your <span>Note Board</span></h1>
-          <p>
-            NoteBoard functions as a service for making short text notes, which
-            can be imported from file and export into your google calendar.
-          </p>
-          <button>Create Note</button>
-        </div>
+    <section class="notes-wrapper">
 
-        <div class="intro-note">
-          <div class="note note-input">
-            <i class="fas fa-times-circle fuck" id="btn-close"></i>
-            <input type="text" name="note-title" placeholder="Title" required maxlength="20"/>
-            <textarea name="note-text" placeholder="Note" required></textarea>
-            <button type="submit">Add Note</button>
-            <span class="input-length">100</span>
-          </div>
-        </div>
-      </section>
+    </section>
+  </main>
 
-      <section class="notes-wrapper">
-        <!-- <div class="drag-n-drop">
-            <h3>Drag & Drop to Upload File</h3>
-            <button>Browse File</button>
-            <input type="file" hidden />
-          </div> -->
-      </section>
-    </main>
+  <div class="modal off">
+    <div class="auth">
+      <i class="fas fa-times-circle fuck" id="btn-close"></i>
+      <h3>It's nice to see <span>You</span> back</h3>
+      <p>And you are?</p>
+      <input type="email" id="auth-login" placeholder="your beautiful email . . ." />
+      <input type="password" id="auth-pass" placeholder="your safest password . . ." />
+      <button>Login</button>
+      <p>Not registered yet? <a href="#">Join us now!</a></p>
+    </div>
+  </div>
 
-    <script src="/src/script/app.js"></script>
-    <script src="/src/script/appearance.js"></script>
-  </body>
+  <script src="/src/script/app.js"></script>
+  <script src="/src/script/appearance.js"></script>
+  <script src="/src/script/login.js"></script>
+</body>
+
 </html>
