add clear board

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,8 @@
           NoteBoard functions as a service for making short text notes, which
           can be imported from file and export into your google calendar.
         </p>
-        <button>Create Note</button>
+        <button class="btn-create-note">Create Note</button>
+        <button class="btn-clear-board">Clear Board</button>
       </div>
 
       <div class="intro-note">
@@ -88,7 +89,7 @@
       <input type="email" id="auth-login" placeholder="your beautiful email . . ." />
       <p>and</p>
       <input type="password" id="auth-pass" placeholder="your safest password . . ." />
-      <button>Login</button>
+      <button class="btn-login-reg">Login</button>
       <p>Not registered yet? <a href="#">Join us now!</a></p>
       <p>You better do not forget your password, because there are no reset function for it. x0x0</p>
     </div>
