--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,10 @@
           NoteBoard functions as a service for making short text notes, which
           can be imported from file and export into your google calendar.
         </p>
-        <button class="btn-create-note">Create Note</button>
-        <button class="btn-clear-board">Clear Board</button>
+        <div class="intro-btn-container">
+          <button class="btn-create-note">Create Note</button>
+          <button class="btn-clear-board">Clear Board</button>
+        </div>
         <p class="account-info">Logined with <span class="account-info-email">pushkarev.ar@gmail.com</span></p>
       </div>
 
