--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
       <div class="intro-text">
         <h1>Wellcome to Your <span>Note Board</span></h1>
         <p>
-          NoteBoard functions as a service for making short text notes, which
-          can be imported from file and export into your google calendar.
+          Note board is simple note-taking service, that allows you to create notes extremely fast even without any
+          registration. And you also can sync your notes by using personal account.
         </p>
         <div class="intro-btn-container">
           <button class="btn-create-note">Create Note</button>
